# chata

./: .gitignore  LICENSE  README.md  setup.cfg
chata/: __init__.py  cli.py  core.py  events.py  pool.py
chata/stats/: __init__.py  event_over_time.py  group.py  messages_per.py  people.py  people_tracker.py
chata/visualizations/: __init__.py  average_messages_over_time_in_group.py  common_intervals.py  frequent_days.py  frequent_hours.py  group_names.py  leaderboard.py  least_active.py  messages_per_day.py  most_active.py  people_over_time.py  total_people.py
tests/: test_events.py  test_utils.py
