[options]
python_requires = >=3.6
packages = chata
install_requires =
    matplotlib
    python-bidi

[metadata]
name = chata
version = 0.1.0
description = A library for analysis and visualization of WhatsApp chats
author = Maor Kleinberger
author_email = kmaork@gmail.com
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
license_file = LICENSE
keywords = whatsapp library analysis visualization
url = https://github.com/kmaork/chata
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Libraries :: Python Modules

[options.entry_points]
console_scripts =
    chata = chata.cli:main
